Thu Aug 24 19:27:04 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Tue Aug 22 18:19:39 1995    <tytso@rsts-11.mit.edu>

	* aclocal.m4 (_MAKE_SUBDIRS): Change subdir recursion so that 
		a missing subdirectory is skipped.  

Mon Aug 21 16:42:42 EDT 1995	Paul Park	(pjpark@mit.edu)

	* Makefile.in - Change mkdir to mkdir -p.

Tue Aug 15 16:19:29 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: For OSF/1 specify that the -rpath directive takes
		a colon separated path.

	* aclocal.m4 (SHLIB_RPATH_DIRS): Allow for directory path to be
		colon separated for different directories.


Tue Aug 15 01:37:19 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* Makefile.in: Change some spaces back to tabs

Mon Aug  7 19:26:06 1995  Theodore Y. Ts'o  <tytso@dcl>

	* aclocal.m4 (SS_RULES): Add double quotes around "$}{*.ct"

	* aclocal.m4 (CONFIG_RULES): Add $(SHELL) to invocation of
		autoconf, so that things work even if the execute bit
		isn't set on the shell script.

Tue Jul 18 19:20:49 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* aclocal.m4 (KRB5_SOCKADDR_SA_LEN): Add space before = to keep
		shell happy. 

Sun Jul 16 05:02:41 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* aclocal.m4 : Defined KRB5_SOCKADDR_SA_LEN, a test to determine
        if sockaddr has the sa_len field.  

Wed Jul 12 11:47:43 EDT 1995	Paul Park	(pjpark@mit.edu)
	* aclocal.m4 - Add LDFLAGS setting to KRB5_LIBRARIES.  This allows
		building without using the rule V5_USE_SHARED_LIBS.  Also,
		don't pass LDFLAGS in recursion because this overrides
		the values in individual Makefiles.

Sun Jul  9 06:15:33 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* aclocal.m4: backslash '$' characters that go into double-quoted
		strings so shells that treat $(foo) like `foo` won't barf

Sun Jul  9 01:31:25 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* Makefile.in: remove bogus definitions of prefix, etc.

Fri Jul 7 15:29:43 EDT 1995	Paul Park	(pjpark@mit.edu)